# FastAPI-MusicRecommendations

./: .gitignore  README.md  dockerfile  main.py  pyproject.toml  requirements.txt
