[tool.poetry]
name = "fastapiproject"
version = "0.1.0"
description = ""
authors = ["silonely <zxzx357zxzx@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.2"
requests = "^2.30.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
python-dotenv = "^1.0.0"
google-api-python-client = "^2.86.0"
google-auth = "^2.18.1"
google-auth-oauthlib = "^1.0.0"
google-auth-httplib2 = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
